removing obsolete RSMonitor